--- a/style.css
+++ b/style.css
@@ -2,22 +2,38 @@ body {
   margin: 0;
 }
 
+.left-div {
+  margin: 50px 32% 30px 30px;
+  padding: 8px 16px;
+}
+
 .navbar ul {
   list-style-type: none;
-  margin: 0;
+  margin-top: 10%;
+  margin-right: 12%;
   padding: 0;
-  width: 25%;
+  width: 16%;
   background-color: #f1f1f1;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
+  float: right;
+  height: auto;
+  border: 1px solid #555;
+}
+
+.navbar li {
+  border-bottom: 1px solid #555;
+}
+
+.navbar li:last-child {
+  border-bottom: none;
 }
 
 .navbar li a {
   display: block;
-  color: #000;
+  color: black;
   padding: 8px 16px;
   text-decoration: none;
+  text-align: center;
+  overflow-x: auto;
 }
 
 .navbar li a.active {
